--- a/package.json
+++ b/package.json
@@ -1,55 +1,29 @@
 {
-  "name": "vite-project",
+  "name": "my-app",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc  && vite build ",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "serve": "dotenv -e .env.prod node server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
-    "@mui/styled-engine-sc": "^5.14.10",
-    "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.5.0",
-    "clsx": "^2.0.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "js-cookie": "^3.0.5",
-    "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0"
+    "@metamask/detect-provider": "^2.0.0",
+    "clsx": "^2.1.0",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18"
   },
-  "homepage": "https://github.com/outsider987/aha-frontend",
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.4.10",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^4.0.0",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
